--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phosphor-keymap",
   "version": "0.1.0",
-  "description": "A module for cross-browser key controls",
+  "description": "A module for cross-browser keyboard shortcut support.",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "dependencies": {},
