--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "dependencies": {
-    "phosphor-signaling": "^1.1.0"
+    "phosphor-signaling": "^1.1.0",
+    "phosphor-disposable": "^1.0.3"
   },
   "devDependencies": {
     "browserify-css": "^0.6.1",
