--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phosphor-keymap",
   "version": "0.1.0",
-  "description": "A module for cross-browser keyboard shortcut support.",
+  "description": "A module for keyboard shortcut mapping.",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "dependencies": {
@@ -9,7 +9,6 @@
     "phosphor-disposable": "^1.0.3"
   },
   "devDependencies": {
-    "browserify-css": "^0.6.1",
     "browserify-istanbul": "^0.2.1",
     "coveralls": "^2.11.4",
     "expect.js": "^0.3.1",
@@ -51,7 +50,9 @@
   "keywords": [
     "keymap",
     "keyboard",
-    "key"
+    "key",
+    "map",
+    "shortcut"
   ],
   "author": "S. Chris Colbert <sccolbert@gmail.com>",
   "license": "BSD-3-Clause",
