--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -8,5 +8,10 @@
     "moduleResolution": "node",
     "target": "ES5",
     "outDir": "../lib"
-  }
+  },
+  "files": [
+    "../typings/clear-cut/clear-cut.d.ts",
+    "index.ts",
+    "keycodes.ts"
+  ]
 }
