--- a/package.json
+++ b/package.json
@@ -47,9 +47,7 @@
     "lib/index.js",
     "lib/index.d.ts",
     "lib/keycodes.js",
-    "lib/keycodes.d.ts",
-    "lib/selectors.js",
-    "lib/selectors.d.ts"
+    "lib/keycodes.d.ts"
   ],
   "keywords": [
     "keymap",
