--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "lib/index.d.ts",
   "dependencies": {
     "clear-cut": "^2.0.1",
-    "phosphor-disposable": "^1.0.3"
+    "phosphor-disposable": "^1.0.4"
   },
   "devDependencies": {
     "browserify": "^11.2.0",
@@ -24,8 +24,8 @@
     "karma-mocha-reporter": "^1.1.1",
     "mocha": "^2.2.5",
     "rimraf": "^2.4.2",
-    "typedoc": "git://github.com/phosphorjs/typedoc.git",
-    "typescript": "1.6.0-beta"
+    "typedoc": "^0.3.11",
+    "typescript": "^1.6.2"
   },
   "scripts": {
     "clean": "rimraf lib && rimraf test/build && rimraf test/coverage",
