--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "typings": "lib/index.d.ts",
   "dependencies": {
     "clear-cut": "^2.0.1",
+    "phosphor-command": "^0.5.0",
     "phosphor-disposable": "^1.0.4"
   },
   "devDependencies": {
